--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</div>
 		<h2>Готовые страницы:</h2>
 		<ol class="rootpage__list">
-			<li><a target="_blank" href="home.html">Главная</a></li>
+			<li><a target="_blank" href="home.html">LAX_Airport </a></li>
 		</ol>
 		<h2>Попапы:</h2>
 		<ol class="rootpage__list">
@@ -28,9 +28,8 @@
 		</div>
 		<div class="rootpage__contacts">
 			<h2>Мои контакты:</h2>
-			<p>Почта: <a href="mailto:email@gmail.com">email@gmail.com</a></p>
-			<p>Телефон: <a href="tel:8800800800">8 800 800 800</a></p>
-			<p>Соц. сеть: <a href="">ссылка на соц. сеть</a></p>
+			<p>Почта: <a href="mailto:zakrevckijartem@gmail.com">zakrevckijartem@gmail.com</a></p>
+			<p>Соц. сеть: <a href="https://t.me/Artemon_22">Telegram</a></p>
 		</div>
 	</div>
 </body>
