--- a/home.html
+++ b/home.html
@@ -6,9 +6,11 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-
-	<link rel="stylesheet" href="css/style.min.css?_v=20230416163617">
-	<link rel="shortcut icon" href="favicon.ico">
+	<script src="https://api-maps.yandex.ru/2.1/?apikey=bbca1236-7429-44c5-b54e-add0f752bab5&lang=ru_RU&_v=20230417161051" type="text/javascript
+    "></script>
+	<link rel="stylesheet" href="css/style.min.css?_v=20230417161051">
+	<!-- <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A059045ac5ac18af874f0fd876e6bcd610ac03ad68a49137f40b3864b84fdd761&amp;width=1110&amp;height=404&amp;lang=ru_RU&amp;scroll=true&_v=20230417161051"></script> -->
+	<!-- <link rel="shortcut icon" href="favicon.ico"> -->
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -19,7 +21,7 @@
 			<div class="header__container">
 				<div class="header__body">
 					<div class="header__logo">
-						<a href="index.html"><img src="img/svg/logo.svg" alt="logo"></a>
+						<a href="home.html"><img src="img/svg/logo.svg" alt="logo"></a>
 					</div>
 					<div class="header__menu menu">
 
@@ -234,7 +236,9 @@
 										</div>
 										<div class="content__bottom">
 											<div class="pagging">
-												<a href="" class="pagging__arrow"></a>
+												<a href="#" class="pagging__arrow">
+													<img src="img/svg/spollers_arrow-l.svg" alt="">
+												</a>
 												<ul class="pagging__list">
 													<li>
 														<a href="" class="pagging__item _active">1</a>
@@ -247,8 +251,11 @@
 													</li>
 
 												</ul>
-												<a href="" class="pagging__arrow"></a>
+												<a href="#" class="pagging__arrow">
+													<img src="img/svg/spollers_arrow-r.svg" alt="">
+												</a>
 											</div>
+											<a href="arrivals.html" class="link">View all arrivals <span><img src="img/svg/arrow_blue.svg" alt=""></span></a>
 										</div>
 
 
@@ -351,6 +358,29 @@
 
 											</table>
 										</div>
+										<div class="content__bottom">
+											<div class="pagging">
+												<a href="#" class="pagging__arrow">
+													<img src="img/svg/spollers_arrow-l.svg" alt="">
+												</a>
+												<ul class="pagging__list">
+													<li>
+														<a href="" class="pagging__item _active">1</a>
+													</li>
+													<li>
+														<a href="" class="pagging__item">2</a>
+													</li>
+													<li>
+														<a href="" class="pagging__item">3</a>
+													</li>
+
+												</ul>
+												<a href="#" class="pagging__arrow">
+													<img src="img/svg/spollers_arrow-r.svg" alt="">
+												</a>
+											</div>
+											<a href="departures.html" class="link">View all departures <span><img src="img/svg/arrow_blue.svg" alt=""></span></a>
+										</div>
 									</div>
 								</form>
 								<!-- find__t-->
@@ -379,7 +409,7 @@
 												<label for="park_c">Exit time</label>
 												<input id="park_c" type="">
 											</div>
-											<div class="find_p-buttom">
+											<div class="find_p-button">
 												<button type="submit">Search parking</button>
 											</div>
 										</div>
@@ -628,7 +658,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20230416163617"></script>
+	<script src="js/app.min.js?_v=20230417161051"></script>
 
 </body>
 
