--- a/parking.html
+++ b/parking.html
@@ -6,10 +6,10 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<!-- <script src="https://api-maps.yandex.ru/2.1/?apikey=bbca1236-7429-44c5-b54e-add0f752bab5&lang=ru_RU&_v=20230423225458" type="text/javascript
+	<!-- <script src="https://api-maps.yandex.ru/2.1/?apikey=bbca1236-7429-44c5-b54e-add0f752bab5&lang=ru_RU&_v=20230429210307" type="text/javascript
     "></script> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230423225458">
-	<!-- <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A059045ac5ac18af874f0fd876e6bcd610ac03ad68a49137f40b3864b84fdd761&amp;width=1110&amp;height=404&amp;lang=ru_RU&amp;scroll=true&_v=20230423225458"></script> -->
+	<link rel="stylesheet" href="css/style.min.css?_v=20230429210307">
+	<!-- <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A059045ac5ac18af874f0fd876e6bcd610ac03ad68a49137f40b3864b84fdd761&amp;width=1110&amp;height=404&amp;lang=ru_RU&amp;scroll=true&_v=20230429210307"></script> -->
 	<!-- <link rel="shortcut icon" href="favicon.ico"> -->
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -486,8 +486,8 @@
 						<div class="title">
 							<h2>What our customers say</h2>
 						</div>
-						<div class="customers__columns-cards">
-							<div class="customers__card">
+						<div class="customers__columns-cards grid">
+							<div class="customers__card grid-item">
 								<picture><source srcset="img/block/“.webp" type="image/webp"><img src="img/block/“.png" alt="vector"></picture>
 								<div class="comments_top">
 									&#8221;I will park again if price is right, it was quick pick up and go&#8220;
@@ -495,7 +495,7 @@
 								<div class="comments_main"></div>
 								<div class="comments__bottom"><span>Junhyun Song,</span> parked at <a href="#">Hilton LAX Parking</a></div>
 							</div>
-							<div class="customers__card">
+							<div class="customers__card grid-item">
 								<picture><source srcset="img/block/“.webp" type="image/webp"><img src="img/block/“.png" alt="vector"></picture>
 								<div class="comments_top">
 									&#8221;I will park again if price is right, it was quick pick up and go&#8220;
@@ -505,7 +505,7 @@
 									When it was time for pick-up, I noticed that the shuttles did not always stop at the pick up points. For us, it was difficult to get cell phone reception at the airport so we had difficulty reaching Wally Park to let them know where we were. It says the shuttles stop at all pick up points but that was not our experience. We were able to catch the 4th shuttle going by. They run very frequently, so we lucked out there!”</div>
 								<div class="comments__bottom"><span>J. HAMMOND,</span> parked at <a href="#">WallyPark Premier Garage</a></div>
 							</div>
-							<div class="customers__card">
+							<div class="customers__card grid-item">
 								<picture><source srcset="img/block/“.webp" type="image/webp"><img src="img/block/“.png" alt="vector"></picture>
 								<div class="comments_top">
 									&#8221;“All is good. The only comment I have is it is a bit confusing when you enter the parking lot. Maybe some signs will be helpful.”&#8220;
@@ -513,7 +513,7 @@
 								<div class="comments_main"></div>
 								<div class="comments__bottom"><span>lan Chang,</span> parked at <a href="#">Joe's Airport Parking</a></div>
 							</div>
-							<div class="customers__card">
+							<div class="customers__card grid-item">
 								<picture><source srcset="img/block/“.webp" type="image/webp"><img src="img/block/“.png" alt="vector"></picture>
 								<div class="comments_top">
 									&#8221;I will park again if price is right, it was quick pick up and go&#8220;
@@ -521,7 +521,7 @@
 								<div class="comments_main"></div>
 								<div class="comments__bottom"><span>Junhyun Song,</span> parked at <a href="#">Hilton LAX Parking</a></div>
 							</div>
-							<div class="customers__card">
+							<div class="customers__card grid-item">
 								<picture><source srcset="img/block/“.webp" type="image/webp"><img src="img/block/“.png" alt="vector"></picture>
 								<div class="comments_top">
 									&#8221;“Great job. Coming back again.”&#8220;
@@ -529,7 +529,7 @@
 								<div class="comments_main"></div>
 								<div class="comments__bottom"><span>Kevin M Tyler,</span> parked at <a href="#"> WallyPark Premier Garage</a></div>
 							</div>
-							<div class="customers__card">
+							<div class="customers__card grid-item">
 								<picture><source srcset="img/block/“.webp" type="image/webp"><img src="img/block/“.png" alt="vector"></picture>
 								<div class="comments_top">
 									&#8221;I will park again if price is right, it was quick pick up and go&#8220;
@@ -604,7 +604,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20230423225458"></script>
+	<script src="js/app.min.js?_v=20230429210307"></script>
 
 
 </body>
